--- a/videoUI/src/components/videochatpage/notifications/displayprofile.module.scss
+++ b/videoUI/src/components/videochatpage/notifications/displayprofile.module.scss
@@ -44,7 +44,7 @@
     }
     &__onlinestatus{
         position: absolute;
-        top: 0;
+        top: 5%;
         display: flex;
         flex-direction: column-reverse;
         right: 20%;
