--- a/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
+++ b/videoUI/src/components/homepage/subComponents/appfeatures.module.scss
@@ -39,7 +39,7 @@ color: $third-color;
 
     //color: $sixth-color;
     text-align: left;
-    border: solid red !important;
+    border: solid orange !important;
 font-size: 0.9rem;
 &.toggled{
     color: $sixth-color;
