--- a/videoUI/src/components/homepage/subComponents/createv2.module.scss
+++ b/videoUI/src/components/homepage/subComponents/createv2.module.scss
@@ -27,14 +27,21 @@
 
 .input{
     &__container{
-        background-color: $third-color;
-        width: 40%;
-        margin: 1rem 0 1rem;
-        border-radius: 0.35rem;
-        display: flex;
-        transition: all ease-in-out 0.5s;
-        //box-shadow: 0 px 3px 0px $third-color;
-        border: solid $fourth-color;
+        @media(min-width:320px){
+            background-color: $third-color;
+            width: 100%;
+            margin: 1rem 0 1rem;
+            border-radius: 0.35rem;
+            display: flex;
+            transition: all ease-in-out 0.5s;
+            //box-shadow: 0 px 3px 0px $third-color;
+            border: solid $fourth-color;
+        }
+        @media(min-width: 768px){
+        }
+        @media(min-width: 1100px){
+            width: 50%;
+        }
     &.toggled{
         margin-left: -100rem;
         visibility: hidden;
