--- a/videoUI/src/components/videochatpage/utilities/modal.module.scss
+++ b/videoUI/src/components/videochatpage/utilities/modal.module.scss
@@ -4,6 +4,11 @@
     position: absolute;
     bottom: 0;
     z-index: 2;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
 }
 
 .modal{
@@ -28,6 +33,7 @@
 &__button{
     background-color: $third-color !important;
     outline: none;
+    z-index: 1000 !important;
     color: $fourth-color !important;
     border: solid $fourth-color !important;
 &:target, &:focus, &:active, &:visited{
@@ -43,7 +49,9 @@
 }
 }
 &__text{
+    z-index: 500 !important;
     padding: 0.75rem;
+    font-size: 1.5rem !important;
     color: $primary-color;
 }
 
@@ -53,9 +61,9 @@
     padding: 0.5rem;
     font-weight: 700;
     margin: 0.5rem 0.35rem 0.95rem 0;
-    color: $fourth-color;
-    font-size: 0.75rem;
-    background-color: $third-color;
+    color: $third-color;
+    font-size: 1rem;
+    background-color: $fourth-color;
 }
 &__svg{
     border: solid orange;
@@ -78,7 +86,8 @@
         z-index: 50;
     }
     &__row{
-
+        display: flex !important;
+        flex-direction: column !important;
         position: relative;
         padding: 2rem;
         background-color: lighten($third-color, 5%);
